package strategy;

public interface TravelStrategy {
    public void travel(String from, String to);
}
